[package]
name = "flintlock-2D"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.13.1"
nalgebra-glm = "0.18.0"
png = "0.17.8"
vulkano = "0.32.0"
vulkano-shaders = "0.32.0"
vulkano-win = "0.32.0"
winit = "0.27.3"
